--- a/css/gems.css
+++ b/css/gems.css
@@ -9,7 +9,7 @@ id = "ruby"; {
 
 /* Select the image with class of emerald */
 
-/*selector for emerald goes here */  {
+id="emerald";  {
   position: absolute;
   z-index: 2;
   top: 350px;
