--- a/css/gems.css
+++ b/css/gems.css
@@ -1,6 +1,6 @@
 /* Select the image with a id of ruby */
 
-id="ruby"; {
+#ruby {
   position: absolute;
   z-index: 1;
   top: 315px;
@@ -9,7 +9,7 @@ id="ruby"; {
 
 /* Select the image with class of emerald */
 
-id="emerald";  {
+#emerald  {
   position: absolute;
   z-index: 2;
   top: 350px;
@@ -18,7 +18,7 @@ id="emerald";  {
 
 /* Select the image inside the element with an id of sand (using its descendant relationship) */
 
-/*selector for sapphire goes here */{
+#
   position: absolute;
   z-index: 5;
   top: 315px;
