--- a/css/gems.css
+++ b/css/gems.css
@@ -18,7 +18,7 @@
 
 /* Select the image inside the element with an id of sand (using its descendant relationship) */
 
-#
+#sand {
   position: absolute;
   z-index: 5;
   top: 315px;
@@ -27,7 +27,7 @@
 
 /* Select the image with the class "yellow_diamond" */
 
-/*selector for yellow diamond goes here */ {
+#yellow_diamond {
   position: absolute;
   z-index: 4;
   top: 325px;
@@ -35,7 +35,7 @@
 }
 
 /* Select the image that has ad id of diamond */
-/*selector for diamond goes here */ {
+#diamond {
   position: absolute;
   z-index: 3;
   top: 300px;
