automatically backed up by learn

--- a/css/gems.css
+++ b/css/gems.css
@@ -9,7 +9,7 @@
 
 /* Select the image with class of emerald */
 
-#emerald  {
+.emerald  {
   position: absolute;
   z-index: 2;
   top: 350px;
@@ -27,7 +27,7 @@
 
 /* Select the image with the class "yellow_diamond" */
 
-#yellow_diamond {
+.yellow_diamond {
   position: absolute;
   z-index: 4;
   top: 325px;
